<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.podradar</groupId>
    <artifactId>podradar-java-sdk-parent</artifactId>
    <version>0.1.0</version>
    <packaging>pom</packaging>

    <name>pod-radar Java SDK (parent)</name>
    <description>Multi-module parent for pod-radar Java SDK (sdk-core + podradar-sdk + crawler-sdk + examples).</description>

    <modules>
        <module>sdk-core</module>
        <module>podradar-sdk</module>
        <module>crawler-sdk</module>
        <module>examples</module>
    </modules>

    <properties>
        <!-- SDK 是 Java 8 项目（javac release=8 强制校验 API 面，产物 class 52.0）。
             测试代码用 testRelease 11：wiremock 3.x 需要 Java 11+ 字节码，且测试只在
             现代 JDK 上跑，不随 jar 交付。 -->
        <maven.compiler.release>8</maven.compiler.release>
        <maven.compiler.testRelease>11</maven.compiler.testRelease>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <junit.version>5.10.2</junit.version>
        <wiremock.version>3.6.0</wiremock.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.podradar</groupId>
                <artifactId>sdk-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.podradar</groupId>
                <artifactId>podradar-sdk</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.podradar</groupId>
                <artifactId>crawler-sdk</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.wiremock</groupId>
                <artifactId>wiremock-standalone</artifactId>
                <version>${wiremock.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
